--- a/package.json
+++ b/package.json
@@ -2,14 +2,35 @@
   "name": "aliflix",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "dev": "webpack-dev-server"
   },
   "author": "Alison",
   "license": "MIT",
   "devDependencies": {
-    "webpack": "^4.9.1",
-    "webpack-cli": "^2.1.4"
+    "@babel/core": "^7.0.0-beta.48",
+    "@babel/plugin-transform-async-to-generator": "^7.0.0-beta.48",
+    "@babel/preset-env": "^7.0.0-beta.48",
+    "babel-loader": "^8.0.0-beta",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "gh-pages": "^1.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "img-loader": "^3.0.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^2.1.5",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2"
+  },
+  "dependencies": {
+    "npm": "^6.1.0"
   }
 }
